Updated cypress cloud details

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           with:
             record: true
             parallel: true
-            command: "npm run cy:chrome:headless --record "
+            command: "npm run cy:chrome:headless"
           env:
             CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
         
