--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "cypress.config.js",
   "scripts": {
     "cy:headless": "cypress run --config baseUrl=${baseUrl} --headless",
-    "cy:chrome:headless": "cypress run --config baseUrl=${baseUrl} --browser chrome --headless",
-    "cy:firefox:headless": "cypress run --config baseUrl=${baseUrl} --browser firefox --headless",
+    "cy:chrome:headless": "cypress run --config baseUrl=${baseUrl} --browser chrome --headless --record",
+    "cy:firefox:headless": "cypress run --config baseUrl=${baseUrl} --browser firefox --headless --record",
     "cy:chrome": "cypress run --config baseUrl=${baseUrl} --browser chrome",
     "cy:firefox": "cypress run --config baseUrl=${baseUrl} --browser firefox",
     "cy:headed": "cypress run --config baseUrl=${baseUrl} --headed",
